# wecker

./: README.md  main.py  pyproject.toml
.github/: copilot-instructions.md  prompts.md
