[project]
name = "wecker"
version = "0.1.0"
description = "wecker in 10 Minuten"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rich",
]

[project.scripts]
wecker = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main.py"]
